Fix aside collapse

--- a/addon/styles/design-system.css
+++ b/addon/styles/design-system.css
@@ -58,6 +58,7 @@ body > main {
 /* collapsed */
 
 aside.collapsed {
+  width: inherit !important;
   min-width: inherit !important;
 }
 
